--- a/03_Python_Basics/02_Basic_Data_Types/Basic_Data_Types.ipynb
+++ b/03_Python_Basics/02_Basic_Data_Types/Basic_Data_Types.ipynb
@@ -498,6 +498,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That was fun 😎\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('That was fun 😎')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -506,7 +523,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -520,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
