improve Basic_Data_Types_advanced.ipynb

--- a/03_Python_Basics/02_Basic_Data_Types/Basic_Data_Types_advanced.ipynb
+++ b/03_Python_Basics/02_Basic_Data_Types/Basic_Data_Types_advanced.ipynb
@@ -126,7 +126,7 @@
      "output_type": "stream",
      "text": [
       "<>:5: SyntaxWarning: \"is\" with 'int' literal. Did you mean \"==\"?\n",
-      "C:\\Users\\user1\\AppData\\Local\\Temp\\ipykernel_8724\\2147584514.py:5: SyntaxWarning: \"is\" with 'int' literal. Did you mean \"==\"?\n",
+      "C:\\Users\\user1\\AppData\\Local\\Temp\\ipykernel_11192\\2147584514.py:5: SyntaxWarning: \"is\" with 'int' literal. Did you mean \"==\"?\n",
       "  print(True == 1, True is 1)  # equality vs identity\n"
      ]
     }
@@ -390,6 +390,27 @@
     "print(n, hex(n), oct(n), bin(n))\n",
     "assert int('ff', 16) == 255\n",
     "assert format(255, '08b') == '11111111'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current time: 2025-10-11 18:25:25\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "current_time = datetime.now()\n",
+    "\n",
+    "print(\"Current time:\", current_time.strftime(\"%Y-%m-%d %H:%M:%S\"))"
    ]
   },
   {
