--- a/29_NumPy/03_Creating_Arrays_from_Scratch/Creating_Arrays_from_Scratch_advanced.ipynb
+++ b/29_NumPy/03_Creating_Arrays_from_Scratch/Creating_Arrays_from_Scratch_advanced.ipynb
@@ -559,9 +559,7 @@
     "- range-based construction (`arange`, `linspace`)\n",
     "- broadcasting for grid construction\n",
     "- reproducible randomness with `Generator`\n",
-    "- dtype choices for memory and correctness\n",
-    "\n",
-    "If you want, I can generate a \"challenge\" version (harder constraints, more edge cases) using the same topic."
+    "- dtype choices for memory and correctness\n"
    ]
   },
   {
